--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,9 @@
-attrs==21.4.0
-autobahn==22.4.2
-channels==3.0.4
-Django==4.0.4
-django-allauth==0.50.0
-django-last-seen==0.3
-django-registration-redux==2.10
-django-templated-mail==1.1.1
-djangorestframework==3.13.1
-hyperlink==21.0.0
-idna==3.3
-incremental==21.3.0
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-oauthlib==3.2.0
-Pillow==9.1.0
-psycopg2==2.9.3
-pycparser==2.21
-PyJWT==2.4.0
-pyOpenSSL==22.0.0
-python3-openid==3.2.0
-pytz==2022.1
-requests==2.27.1
-requests-oauthlib==1.3.1
-service-identity==21.1.0
-six==1.16.0
-social-auth-app-django==4.0.0
-social-auth-core==4.2.0
-Twisted==22.4.0
-typing_extensions==4.2.0
-urllib3==1.26.9
-zope.interface==5.4.0
+social-auth-app-django        5.0.0
+social-auth-core
+python3-openid
+psycopg2
+Pillow
+djangorestframework
+django-filter
+Django
+aiogram
